--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,10 +21,10 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: 18
-          cache: 'npm'
       
       - name: Install dependencies
-        run: npm ci
+        # Using npm install instead of npm ci since we don't have a lock file
+        run: npm install
       
       - name: Build
         run: npm run build
